      assertion failure error (LP: #38397, closes: #341645)
  * common/rpackageview.cc:
    - add new "Missing Recommends" default filter
  * common/rpackage.cc:
    - fix code to get candidate origin
    - support getting the candidate release file name
  * common/rpackagestatus.cc:
    - support maintenanceEndTime() (if the distro supports that)

 --

synaptic (0.62.1) unstable; urgency=low

  * po/es.po:
    - updated Spanish translation (thanks to
       Francisco Javier Cuadrado)
  * debian/control:
    - added "menu" to the recommends (closes: #478250)
  * gtk/glade/window_main.glade:
    - make the main vpane shinkable
  * gtk/rgmainwindow.cc:
    - do not loose the keyboard focus after a package 
      action in the listview
  * debian/control:
    - switch bzr branch to bzr.debian.org

 -- Michael Vogt <mvo@debian.org>  Tue, 18 Jun 2008 10:17:31 +0200

synaptic (0.62) unstable; urgency=low

  [ Michael Vogt]
  * debian/rules, debian/control:
    - use dh_icons and add appropriate b-d on debhelper
  * g++ 4.3 fixes (closes: #456044)
  * desktop-file-validate does not complain anymore
    (LP: #33598)
  * gtk/rgmainwindow.cc:
    - wording fixes (thanks to Matthew Paul Thomas)
  * po/he.po:
    - translation update (thanks to Lior Kaplan, closes: #461139)
  * po/pl.po:
    - translation update (thanks to Tomasz Argasiński)
  * po/cs.po:
    - translation update (thanks to Kamil Páral)
  * gtk/gsynaptic.cc:
    - fix typo (thanks to  Sarah Hobbs)
  * gtk/rgsummarywindow.cc:
    - code cleanup and fix potential endless loop (thanks to
      Sebastien Bacher)

  [ Brian Murray ]
  * typo fixes (LP: #64482, LP: #157850, LP: #179914, LP: #179912, LP: #179909)

 -- Michael Vogt <mvo@debian.org>  Sat, 26 Apr 2008 10:50:53 +0200

synaptic (0.61+nmu1) unstable; urgency=low

  * Non-maintainer upload.
  * Fix FTBFS with gcc-4.3. Thanks to Cyril Brulebois for the patch. (Closes:
    #456044)
  * Lintian cleanups:
    - Correct the format of the NEWS file.