@@ -25,6 +25,8 @@ synaptic (0.62.2) unstable; urgency=low
     - support getting the candidate release file name
   * common/rpackagestatus.cc:
     - support maintenanceEndTime() (if the distro supports that)
+  * gtk/rgpkgdetails.{cc,h}, common/rpackage.{cc,h}:
+    - add "Get Screenshot" button that talks to screenshots.debian.net
 
  --
 
